# 3DMI

./: .gitignore  .gitmodules  Makefile  README.md  default.cfg  setup_all.sh
common/: constants.h
common/generator/: generator.py
coyote_app/hw/: CMakeLists.txt
coyote_app/hw/src/: init_ip.tcl  vfpga_top.svh
coyote_app/hw/src/hls/mutual_information_master/: histogram.hpp  mutual_info.hpp
coyote_app/sw/: CMakeLists.txt
coyote_app/sw/src/: main.cpp
coyote_app/sw/src/common/: Makefile  constants.h
coyote_app/sw/src/common/generator/: generator.py
fpga/: Makefile  mm2s.cpp  s2mm.cpp
fpga/testbench/: testbench_mm2s.cpp  testbench_s2mm.cpp
linking/: Makefile  xclbin_overlay.cfg
mutual_info/: Makefile  mutual_information_master.cpp
mutual_info/include/hw/mutualInfo/: entropy.hpp  mutual_info.hpp  utils.hpp
mutual_info/testbench/: testbench_mutual_information_master  testbench_mutual_information_master.cpp
sw/: Makefile  host_code.cpp  setup_emu.sh
